Bug 96748 - Default item of Languages/User interface reflects current LibreOffice setting instead of the OS environment
Summary: Default item of Languages/User interface reflects current LibreOffice setting...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.4.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-28 15:17 UTC by OfficeUser
Modified: 2016-09-28 10:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
isue.png (80.18 KB, image/png)
2015-12-28 15:22 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2015-12-28 15:17:29 UTC
On a german language OS environment try the following:

- Go to Optionen/Spracheinstellungen/Sprache

- Change "Benutzeroberfläche" to "English (USA)".

- Click OK

- Re-start LibreOffice

- Go to "Options/Language Settings/Languages"

- Open the drop down menu of "User interface:"


**** Note that the Default item has re-label to "Default - English USA)". Correct would be "Default - German (Germany)"****


- Select change "User interface:" to "Default - English USA)"

- Click OK

- Re-start LibreOffice

- Go to Optionen/Spracheinstellungen/Sprache


Note that we now have "Benutzeroberfläche" "Default - Deutsch (Deutschland)" again. So it is only a labeling issue.
Only the default item of the menu "User interface:" is affected. The similar menu "Local setting:" is not affected by this issue.

I'm rather sure that this is a regression. But I cannot say which is the last good build.
Comment 1 OfficeUser 2015-12-28 15:22:27 UTC
Created attachment 121581 [details]
isue.png
Comment 2 A (Andy) 2015-12-28 15:37:43 UTC
I am not sure whether I understand you right.  For me "Default" shows which UI is currently selected in LO but not from the Operating System.  Therefore, I think there is no bug.  Please correct me if there is a misunderstanding from my side.
Comment 3 OfficeUser 2015-12-28 15:41:28 UTC
@Andy:

It IS a miss understanding from you. "Default" is the OS environment language making sure that LibreOffice always uses environment language by default (after installation).
Comment 4 OfficeUser 2015-12-28 15:43:57 UTC
@Andy:

Otherwise a "Default" item would not make any sense.
Try the "Local setting:". This one works as expected.
Comment 5 A (Andy) 2015-12-28 15:51:11 UTC
Ah, ok, now I understand and you are probably right if I read the LO help.

The LO help says: "The 'Default' entry selects the language of the user interface for the operating system. If this language is not available in the LibreOffice installation, the language of the LibreOffice installation is the default language."

Reproducible with LO 5.1.0.1, Win 8.1: The Default entry is changed for every new selected UI language.
Comment 6 OfficeUser 2016-05-12 19:35:00 UTC
Bug is still present in:

Version: 5.1.3.2
Build ID: 1:5.1.3~rc2-0ubuntu1~trusty1
CPU Threads: 8; OS Version: Linux 3.16; UI Render: default; 
Locale: de-DE (de_DE.UTF-8)
Comment 7 Xisco Faulí 2016-09-12 12:46:22 UTC
Adding keyword 'bibisectRequest'.
Comment 8 Commit Notification 2016-09-28 10:43:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=219aae1cea7ba88d5a4503f8070566755efd3aef

Resolves: tdf#96748 'Default Language' show current ui lang not new default

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2016-09-28 10:45:18 UTC
Not entirely convinced its a regression, but worth fixing anyway