Resolves: tdf#96748 'Default Language' show current ui lang not new default

i.e. if you select it, then the General::UILocale is unset and a new
default generated based on the L10N::UILocale and what langpacks are installed
but what the entry string claims is "Default - Current Language", rather than
"Default - The Language That Will Be Used", so split out the language selection
code into a reusable bit and use that to get the name of the language which will
be selected if this entry is used

Change-Id: I13d901c9a47ef213aea86417501114d4231efae5