desktop/source/app/langselect.cxx
@@ -49,28 +49,6 @@ namespace {
 
 OUString foundLocale;
 
-OUString getInstalledLocale(
-    css::uno::Sequence<OUString> const & installed, OUString const & locale)
-{
-    if (locale.isEmpty())
-        return OUString();  // do not attempt to resolve anything
-
-    for (sal_Int32 i = 0; i != installed.getLength(); ++i) {
-        if (installed[i] == locale) {
-            return installed[i];
-        }
-    }
-    ::std::vector<OUString> fallbacks( LanguageTag( locale).getFallbackStrings( false));
-    for (OUString & rf : fallbacks) {
-        for (sal_Int32 i = 0; i != installed.getLength(); ++i) {
-            if (installed[i] == rf) {
-                return installed[i];
-            }
-        }
-    }
-    return OUString();
-}
-
 void setMsLangIdFallback(OUString const & locale) {
     // #i32939# setting of default document language
     // See #i42730# for rules for determining source of settings
@@ -101,23 +79,15 @@ OUString getEmergencyLocale() {
             officecfg::Setup::Office::InstalledLocales::get()->
             getElementNames());
         OUString locale(
-            getInstalledLocale(
+            getInstalledLocaleForLanguage(
                 inst,
                 officecfg::Office::Linguistic::General::UILocale::get()));
         if (!locale.isEmpty()) {
             return locale;
         }
-        locale = getInstalledLocale(
-            inst, officecfg::System::L10N::UILocale::get());
+        locale = getInstalledLocaleForSystemUILanguage(inst);
         if (!locale.isEmpty()) {
             return locale;
-        }
-        locale = getInstalledLocale(inst, "en-US");
-        if (!locale.isEmpty()) {
-            return locale;
-        }
-        if (inst.hasElements()) {
-            return inst[0];
         }
     } catch (css::uno::Exception & e) {
         SAL_WARN("desktop.app", "ignoring Exception \"" << e.Message << "\"");
@@ -135,7 +105,7 @@ bool prepareLocale() {
         officecfg::Setup::Office::InstalledLocales::get()->getElementNames());
     OUString locale(officecfg::Office::Linguistic::General::UILocale::get());
     if (!locale.isEmpty()) {
-        locale = getInstalledLocale(inst, locale);
+        locale = getInstalledLocaleForLanguage(inst, locale);
         if (locale.isEmpty()) {
             // Selected language is not/no longer installed:
             try {
@@ -153,21 +123,14 @@ bool prepareLocale() {
     }
     bool cmdLanguage = false;
     if (locale.isEmpty()) {
-        locale = getInstalledLocale(
+        locale = getInstalledLocaleForLanguage(
             inst, Desktop::GetCommandLineArgs().GetLanguage());
         if (!locale.isEmpty()) {
             cmdLanguage = true;
         }
     }
     if (locale.isEmpty()) {
-        locale = getInstalledLocale(
-            inst, officecfg::System::L10N::UILocale::get());
-    }
-    if (locale.isEmpty()) {
-        locale = getInstalledLocale(inst, "en-US");
-    }
-    if (locale.isEmpty() && inst.hasElements()) {
-        locale = inst[0];
+        locale = getInstalledLocaleForSystemUILanguage(inst);
     }
     if (locale.isEmpty()) {
         return false;
